[tool.poetry]
name = "aioblockonomics"
version = "0.1.0"
description = "Asynchronous python wrapper for the Blockonomics API"
authors = ["KuroAngel <145038102+KuroKoka551@users.noreply.github.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/KuroKoka551/aioblockonomics"
documentation = "https://www.blockonomics.co/views/api.html"
packages = [{include = "aioblockonomics", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.9.3"
pydantic = "^2.6.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
