[project]
name = "aioblockonomics"
version = "0.3.0"
description = "Asynchronous python wrapper for the Blockonomics API"
authors = [{author = "Angel", email = "145038102+KurosawaAngel@users.noreply.github.com"}]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/KurosawaAngel/aioblockonomics"
documentation = "https://www.blockonomics.co/views/api.html"
packages = [{include = "aioblockonomics", from = "src"}]
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.10.10",
    "dataclass-rest>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
